update thêm ngân sách cho cua hang co so basic chua full